[package]
name = "noise_rs"
version = "0.1.5"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description="The perlin and simplex noise implementation in 2d and 3d"
categories=["algorithms","data-structures"]
license="MIT"

[dependencies]
intmap = "0.7.0"
java_random = "0.1.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3


[lib]
name="noise_rs"
crate_type = ["dylib"]