[package]
name = "noise_rs"
version = "0.1.12"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description="The perlin and simplex noise implementation in 2d and 3d"
categories=["algorithms","data-structures"]
license="MIT"

[dependencies]
intmap = "0.7.0"
java_random = "0.1.6"
sha2 = "0.9.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
